# invenio_gb

./: .invenio  Dockerfile  Dockerfile_large  Pipfile  README.md  celerybeat-schedule.bak  celerybeat-schedule.dir  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg
.github/workflows/: docker-publish.yml
app_data/: vocabularies.yaml
app_data/vocabularies/: cern_experiments.jsonl  cern_experiments.yaml  organisms.yaml  resource_types.yaml
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
site/: .gitkeep  setup.cfg
site/gb_com_inventory/: views.py  webpack.py
