
[metadata]
name = gb-com-inventory

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    gb_com_inventory_views = gb_com_inventory.views:create_blueprint
invenio_assets.webpack =
    gb_com_inventory_theme = gb_com_inventory.webpack:theme
